apps/scm-manager/resources/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scm-manager
spec:
  virtualhost:
    fqdn: scm.etsmtl.club
    tls:
      secretName: scm-manager-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: scm-manager
          port: 80
